Improved registerCardAPI by moving it to customers/{id}/cards
